--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "author": "itzfew (https://t.me/itzfew)",
   "homepage": "https://github.com/itzfew/eduhub-bot",
+  "type": "module",
   "dependencies": {
     "@vercel/node": "^3.2.24",
     "axios": "^1.6.8",
