--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dotenv-cli": "^7.4.2",
   "firebase": "^10.14.1",
   "telegraf": "^4.16.3",
-  "fastest-levenshtein": "^1.0.12"  // Add this line
+  "fastest-levenshtein": "^1.0.12"
 }
   "devDependencies": {
     "@types/axios": "^0.14.0",
