--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@vercel/node": "^3.2.24",
     "axios": "^1.6.8",
+    "canvas": "^2.11.2",
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
@@ -19,6 +20,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/debug": "^4.1.12",
     "@types/node": "^22.8.6",
+    "@types/canvas": "^0.0.29",
     "@vercel/ncc": "^0.38.2",
     "debug": "^4.3.7",
     "nodemon": "^3.1.7",
