--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
     "telegraf": "^4.16.3",
-      "canvas": "^2.11.2"
+      "canvas": "^2.11.2",
     "fastest-levenshtein": "^1.0.12"
   },
   "devDependencies": {
