--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
     "telegraf": "^4.16.3",
-    "canvas": "^2.11.2",
+    "sharp": "^0.33.5",
     "fastest-levenshtein": "^1.0.16",
     "node-fetch": "^3.3.2"
   },
@@ -26,9 +26,9 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "dev": "DEBUG=bot* dotenv -- nodemon -e ts -x ts-node src/index.ts",
-    "devWindows": "@powershell -Command $env:DEBUG='bot*';dotenv -- -- nodemon -e ts -x ts-node src/index.ts",
-    "build": "ncc build src/index.ts -o public -m",
+    "dev": "DEBUG=bot* yarn dotenv -- nodemon -e ts -x ts-node src/index.ts",
+    "devWindows": "@powershell -Command $env:DEBUG='bot*';yarn dotenv -- -- nodemon -e ts -x ts-node src/index.ts",
+    "build": "yarn ncc build src/index.ts -o public -m",
     "prettier": "prettier --write 'src/**/*.ts'",
     "lint": "tsc --noemit"
   },
