--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "telegraf": "^4.16.3",
     "fastest-levenshtein": "^1.0.12"
   },
@@ -19,6 +20,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/debug": "^4.1.12",
     "@types/node": "^22.8.6",
+    "@types/firebase-admin": "^11.0.0", 
     "@vercel/ncc": "^0.38.2",
     "debug": "^4.3.7",
     "nodemon": "^3.1.7",
