--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BOT_TOKEN=""
-FIREBASE_SERVICE_ACCOUNT=""
+BOT_TOKEN=your_bot_token
+FIREBASE_SERVICE_ACCOUNT='{"type":"service_account","project_id":"quizes-3028d",...}'
+NODE_ENV=development
