--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Eduhub",
-  "version": "1.1.0",
+  "version": "1.1.1", 
   "description": "Telegram Bot EduHub",
   "main": "src/index.ts",
   "author": "itzfew (https://t.me/itzfew)",
@@ -10,8 +10,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
-    "firebase": "^10.14.1",
-    "firebase-admin": "^12.0.0",         
+    "firebase": "^10.14.1", 
     "telegraf": "^4.16.3",
     "fastest-levenshtein": "^1.0.12"
   },
@@ -28,10 +27,14 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "dev": "DEBUG=bot* dotenv -- nodemon -e ts -x ts-node src/index.ts",
-    "devWindows": "@powershell -Command $env:DEBUG='bot*';dotenv -- -- nodemon -e ts -x ts-node src/index.ts",
-    "build": "ncc build src/index.ts -o public -m",
-    "prettier": "prettier --write 'src/**/*.ts'",
-    "lint": "tsc --noemit"
+    "dev": "DEBUG=bot* dotenv -e .env -- nodemon -e ts -x ts-node src/index.ts", 
+    "devWindows": "powershell -Command \"$env:DEBUG='bot*'; dotenv -e .env -- nodemon -e ts -x ts-node src/index.ts\"", 
+    "build": "ncc build src/index.ts -o public -m", 
+    "prettier": "prettier --write 'src/**/*.ts'", 
+    "lint": "tsc --noEmit", 
+    "start": "node public/index.js"
+  },
+  "engines": {
+    "node": ">=18.0.0" 
   }
 }
