--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "homepage": "https://github.com/itzfew/eduhub-bot",
   "dependencies": {
     "@vercel/node": "^3.2.24",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
     "telegraf": "^4.16.3",
-    "fastest-levenshtein": "^1.0.12"
+    "fastest-levenshtein": "^1.0.16",
+    "node-fetch": "^3.3.2",
+    "canvas": "^2.11.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -24,7 +26,9 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/node-fetch": "^2.6.11",
+    "@types/canvas": "^0.0.29"
   },
   "scripts": {
     "dev": "DEBUG=bot* dotenv -e .env -- nodemon -e ts -x ts-node src/index.ts",
@@ -33,9 +37,10 @@
     "prettier": "prettier --write 'src/**/*.ts'",
     "lint": "tsc --noEmit",
     "start": "node public/index.js",
-    "typecheck": "tsc --noEmit --strict"
+    "typecheck": "tsc --noEmit --strict",
+    "audit-fix": "npm audit fix"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   }
 }
