--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-  "builds": [
+  "version": 2,
+  "public": true,
+  "rewrites": [
     {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+      "source": "/(.*)",
+      "destination": "api/index.ts"
     }
   ],
-  "functions": {
-    "api/*.ts": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 30
-    }
-  },
-  "buildCommand": "npm install canvas node-fetch && npm run build",
-  "installCommand": "apt-get update && apt-get install -y libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev"
+  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }]
 }
