--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Eduhub",
-  "version": "1.1.1",
-  "description": "Telegram Bot EduHub",
+  "version": "1.1.2",
+  "description": "Telegram Bot EduHub with Automatic Quiz Scheduling",
   "main": "src/index.ts",
-  "author": "itzfew (https://t.me/itzfew)",
+  "author": "itzfew[](https://t.me/itzfew)",
   "homepage": "https://github.com/itzfew/eduhub-bot",
   "dependencies": {
     "@vercel/node": "^3.2.24",
@@ -12,7 +12,8 @@
     "dotenv-cli": "^7.4.2",
     "firebase": "^10.14.1",
     "telegraf": "^4.16.3",
-    "fastest-levenshtein": "^1.0.12"
+    "fastest-levenshtein": "^1.0.12",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
