--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/debug": "^4.1.12",
     "@types/node": "^22.8.6",
+    "@types/node-cron": "^3.0.11",
     "@vercel/ncc": "^0.38.2",
     "debug": "^4.3.7",
     "nodemon": "^3.1.7",
